[#17967] Add Jazzer fuzz testing for OpenSSF dynamic_analysis criterion
* ProtoStream deserialization
* HotRod variable-length integer parsing
* Memcached ASCII number parsing
* Add Maven -Pfuzz profile