@@ -109,10 +109,12 @@
       <bnd.provider.policy>$&lt;range;[==,=+)&gt;</bnd.provider.policy>
       <buildDirectory>target</buildDirectory>
       <commitProtoLockChanges>false</commitProtoLockChanges>
-      <defaultExcludedJUnitGroups>org.infinispan.testing.categories.test.Unstable,org.infinispan.testing.categories.test.Stress,org.infinispan.testing.categories.test.Profiling</defaultExcludedJUnitGroups>
+      <defaultExcludedJUnitGroups>unstable,stress</defaultExcludedJUnitGroups>
+      <defaultJUnitGroups/> <!-- empty means all groups -->
       <!-- unstable and stress because we can have them inside a functional class, for example -->
       <defaultExcludedTestNGGroups>unstable,stress</defaultExcludedTestNGGroups>
       <defaultTestNGGroups>functional,unit,xsite,arquillian</defaultTestNGGroups>
+
       <org.infinispan.tests.threads.virtual>true</org.infinispan.tests.threads.virtual>
       <dir.ispn>../</dir.ispn>
       <rerunFailingTestsCount>0</rerunFailingTestsCount>
@@ -152,11 +154,14 @@
          --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
          --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
          --add-opens=java.base/com.sun.crypto.provider=ALL-UNNAMED
+         --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
+         --add-exports=java.base/jdk.internal.loader=ALL-UNNAMED
          --add-modules=java.se
       </testjvm.jigsawArgs>
+      <testjvm.nativeArgs>--enable-native-access=ALL-UNNAMED</testjvm.nativeArgs>
       <testjvm.blockHoundRedefinitionArgs>-XX:+AllowRedefinitionToAddDeleteMethods</testjvm.blockHoundRedefinitionArgs>
       <testjvm.dynamicAgentLoading/>
-      <testjvm.jdkSpecificArgs>${testjvm.jigsawArgs} -Dnet.bytebuddy.experimental=true ${testjvm.blockHoundRedefinitionArgs} ${testjvm.dynamicAgentLoading}</testjvm.jdkSpecificArgs>
+      <testjvm.jdkSpecificArgs>${testjvm.jigsawArgs} ${testjvm.nativeArgs} -Dnet.bytebuddy.experimental=true ${testjvm.blockHoundRedefinitionArgs} ${testjvm.dynamicAgentLoading}</testjvm.jdkSpecificArgs>
       <testjvm.extraArgs/>
       <forkJvmArgs>-Djdk.virtualThreadScheduler.parallelism=16 -Xmx2G -Djgroups.port_range=50 ${testjvm.commonArgs} ${testjvm.jdkSpecificArgs} ${testjvm.extraArgs}</forkJvmArgs>
       <server.jvm>${env.JAVA_HOME}</server.jvm>
@@ -177,6 +182,8 @@
       <uberjar.deps.optional>true</uberjar.deps.optional>
       <native.build.args>-Ob</native.build.args>
       <native.build.xmx>6g</native.build.xmx>
+      <jazzer.fuzz>0</jazzer.fuzz> <!-- Enable fuzz data generation only with the -Pfuzz profile -->
+      <jazzer.coverage>1</jazzer.coverage> <!-- Always run fuzz testing with existing corpus -->
 
       <!-- dependencies version -->
       <versionx.org.infinispan.memcached-client>1.2.3</versionx.org.infinispan.memcached-client>
@@ -845,6 +852,12 @@
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
             <version>${version.awaitility}</version>
+            <scope>test</scope>
+         </dependency>
+         <dependency>
+            <groupId>com.code-intelligence</groupId>
+            <artifactId>jazzer-junit</artifactId>
+            <version>${version.jazzer}</version>
             <scope>test</scope>
          </dependency>
          <dependency>
@@ -1993,6 +2006,10 @@
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${version.maven.surefire}</version>
                <configuration>
+                  <environmentVariables>
+                     <JAZZER_FUZZ>${jazzer.fuzz}</JAZZER_FUZZ>
+                     <JAZZER_COVERAGE>${jazzer.coverage}</JAZZER_COVERAGE>
+                  </environmentVariables>
                   <systemPropertyVariables>
                      <!-- Ensure we set auto-commit correctly in any JDBC connection. -->
                      <h2.forceAutoCommitOffOnCommit>true</h2.forceAutoCommitOffOnCommit>
@@ -2426,6 +2443,10 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
+               <environmentVariables>
+                  <JAZZER_FUZZ>${jazzer.fuzz}</JAZZER_FUZZ>
+                  <JAZZER_COVERAGE>${jazzer.coverage}</JAZZER_COVERAGE>
+               </environmentVariables>
                <properties>
                   <configurationParameters>
                      testng.excludedGroups = ${defaultExcludedTestNGGroups}
@@ -2616,14 +2637,14 @@
          <id>smoke</id>
          <properties>
             <defaultTestNGGroups>smoke</defaultTestNGGroups>
-            <defaultJUnitGroups>org.infinispan.testing.categories.test.Smoke</defaultJUnitGroups>
+            <defaultJUnitGroups>smoke</defaultJUnitGroups>
          </properties>
       </profile>
       <profile>
          <id>test-unstable</id>
          <properties>
             <defaultTestNGGroups>unstable</defaultTestNGGroups>
-            <defaultJUnitGroups>org.infinispan.testing.categories.test.Unstable</defaultJUnitGroups>
+            <defaultJUnitGroups>unstable</defaultJUnitGroups>
             <!-- empty since we are not going to exclude any group -->
             <defaultExcludedTestNGGroups/>
             <defaultExcludedJUnitGroups/>
@@ -2646,10 +2667,21 @@
          <id>test-stress</id>
          <properties>
             <defaultTestNGGroups>stress</defaultTestNGGroups>
-            <defaultJUnitGroups>org.infinispan.testing.categories.test.Stress</defaultJUnitGroups>
+            <defaultJUnitGroups>stress</defaultJUnitGroups>
             <defaultExcludedTestNGGroups/>
             <defaultExcludedJUnitGroups/>
             <infinispan.test.parallel.threads>1</infinispan.test.parallel.threads>
+         </properties>
+      </profile>
+      <profile>
+         <id>fuzz</id>
+         <properties>
+            <defaultTestNGGroups>fuzz</defaultTestNGGroups>
+            <defaultExcludedTestNGGroups/>
+            <defaultJUnitGroups>fuzz</defaultJUnitGroups>
+            <defaultExcludedJUnitGroups/>
+            <jazzer.fuzz>1</jazzer.fuzz>
+            <jazzer.coverage>1</jazzer.coverage>
          </properties>
       </profile>
       <profile>
